kubernetes.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: drone-demo
  labels:
    app: drone-demo
spec:
  replicas: 1
  template:
    metadata:
      name: drone-demo
      labels:
        app: drone-demo
    spec:
      containers:
        - name: drone-demo
          image: registry.cn-hangzhou.aliyuncs.com/zywlxh/drone-demo
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9999
      restartPolicy: Always
  selector:
    matchLabels:
      app: drone-demo
